add notepad & discountRateValidation update 25/04/13